--- a/.github/workflows/kernel-build.yml
+++ b/.github/workflows/kernel-build.yml
@@ -67,7 +67,7 @@ jobs:
         run: |
           
           mkdir -p "${kernel_result_dir}"
-          docker run --privileged \
+          docker run --privileged --rm \
             -v "$(pwd)/${kernel_result_dir}:/srv/guix_result" \
             hub.oepkgs.net/oerv-ci/guix-kernel-cross-build:v15 \
             guix-cross-build ${{ inputs.commit_url }}
