fix: 增加返回值
kunit-test,kernel-build等任务由于要收集summary结果，非零返回值被拦截后，没有继续传递返回值

目前改为所有任务结尾增加退出状态返回值

--- a/.github/workflows/check-patch.yml
+++ b/.github/workflows/check-patch.yml
@@ -65,7 +65,7 @@ jobs:
 
       - name: check patch
         id: check-patch
-        continue-on-error: true
+        if: ${{ !cancelled() }}
         env:
           FETCH_REF: ${{ inputs.fetch_ref }}
           SRC_REF: ${{ inputs.src_ref }}
@@ -112,6 +112,8 @@ jobs:
           $(cat $patch_dir/checkpatch.log)
           $(echo '```')
           EEE
+
+          exit "${total_error}" # 有错误则步骤失败
           
 
   
